--- a/app/scss/_navigation.scss
+++ b/app/scss/_navigation.scss
@@ -46,11 +46,10 @@ a {
   font-size: $font-lrg;
   padding: 10px 25px;
   margin: -10px -25px;
-  transition: all 300ms ease-in-out;
-}
-
-.mainlinks:hover {
-  color: $cyan;
+  transition: color 300ms ease-in-out;
+  &:hover {
+    color: $cyan;
+  }
 }
 
 .mainlinks::after {
