--- a/app/scss/_skills.scss
+++ b/app/scss/_skills.scss
@@ -13,6 +13,10 @@
   align-items: center;
   grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
   grid-template-rows: repeat(auto-fill, minmax(10rem, 1fr));
+  @include breakpoint-down(small) {
+    grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
+    grid-template-rows: repeat(auto-fill, minmax(8rem, 1fr));
+  }
 }
 
 .skills-grid-cell {
@@ -37,6 +41,9 @@
   border-radius: 5px;
   height: 5rem;
   width: auto;
+  @include breakpoint-down(xsmall) {
+    height: 4rem;
+  }
 }
 
 .buttonsigndiv {
@@ -45,9 +52,11 @@
   align-items: center;
   flex-wrap: wrap;
 }
+
 .signature {
   font-family: "Corinthia", cursive;
-  font-size: 2.5rem;
+  font-size: $font-lrgmed;
+  font-weight: 700;
   margin: 0;
   padding: 1rem 0;
   @include breakpoint-down(small) {
